# Filo

./: .editorconfig  .gitattributes  .gitignore  .prettierrc  CLAUDE.md  README.md  eslint.config.js  index.html  mise.toml  package-lock.json  package.json  vite.config.ts
.claude/: launch.json  settings.json  settings.local.json
.claude/commands/: handover.md  ref-handover.md
.claude/handovers/: 2026-02-18_0000.md  2026-02-19_0000.md  2026-02-19_0419.md  2026-02-19_2140.md  2026-02-19_2316.md  2026-02-20_0000.md  2026-02-21_0031.md  2026-02-21_0140.md  2026-02-23_0000.md  2026-02-23_0320.md
.github/workflows/: release.yml
docs/: DEVLOG.md  SPEC.md
docs/reviews/: 20260223.md
scripts/: _paths.bat  build.bat  bump-version.js  clean.bat  dev.bat  setup.bat  setup.ps1  setup.sh  test.bat  test.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  engine.rs  filters.rs  lib.rs  main.rs  ruleset.rs
src/components/: ExecutionResultDialog.tsx  LoadingOverlay.tsx  RegexTesterPanel.test.tsx  RegexTesterPanel.tsx  RulesetCard.test.tsx  RulesetCard.tsx  RulesetEditDialog.test.tsx  RulesetEditDialog.tsx  RulesetList.tsx  Toast.tsx  Toolbar.test.tsx  Toolbar.tsx
src/lib/: commands.ts  i18n.ts  types.test.ts  types.ts
src/locales/en/: translation.json
src/locales/ja/: translation.json
src/store/: rulesetStore.test.ts  rulesetStore.ts
src/test/: setup.ts
src/test/helpers/: renderWithProviders.tsx
src/test/mocks/: fixtures.ts  tauri.ts
