[package]
name = "filo"
version = "0.1.5"
description = "A file organizer based on user-defined rulesets"
authors = ["you"]
edition = "2021"

[lib]
name = "filo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
glob = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

